--- a/analysis/multi_group_6traits_15weights_ess.Rmd
+++ b/analysis/multi_group_6traits_15weights_ess.Rmd
@@ -407,6 +407,15 @@ make_locusplot(finemap_res_multi,
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/ld_mismatch/LD_mismatch_", trait,".rdata"))
 
+sprintf("The number of problematic regions = %s", length(problematic_region_ids))
+sprintf("The number of problematic genes = %s", length(problematic_genes))
+sprintf("The number of problematic snps = %s", length(res$problematic_snps))
+sprintf("The number of flipped snps = %s", length(res$flipped_snps))
+
+problematic_snps <- res$condz_stats[res$condz_stats$id %in% res$problematic_snps,]
+
+DT::datatable(problematic_snps,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Stats for problematic snps'),options = list(pageLength = 5) )
+
 finemap_res_multi <- ctwas_res_multi$finemap_res
 
 finemap_origin_res_problematic_region <- finemap_res_multi[finemap_res_multi$id %in% problematic_genes,]
@@ -415,7 +424,9 @@ merge_origin_nold <- merge(finemap_origin_res_problematic_region,finemap_noLD_re
 merge_origin_nold <- merge_origin_nold[,c("id","susie_pip.x","susie_pip.y")]
 colnames(merge_origin_nold) <-  c("id","susie_pip_origin","susie_pip_ld-mismatch-fixed") 
 
-DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP'),options = list(pageLength = 5) )
+DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP for problematic genes'),options = list(pageLength = 5) )
+
+
 
 ```
 
@@ -628,6 +639,15 @@ make_locusplot(finemap_res_multi,
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/ld_mismatch/LD_mismatch_", trait,".rdata"))
 
+sprintf("The number of problematic regions = %s", length(problematic_region_ids))
+sprintf("The number of problematic genes = %s", length(problematic_genes))
+sprintf("The number of problematic snps = %s", length(res$problematic_snps))
+sprintf("The number of flipped snps = %s", length(res$flipped_snps))
+
+problematic_snps <- res$condz_stats[res$condz_stats$id %in% res$problematic_snps,]
+
+DT::datatable(problematic_snps,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Stats for problematic snps'),options = list(pageLength = 5) )
+
 finemap_res_multi <- ctwas_res_multi$finemap_res
 
 finemap_origin_res_problematic_region <- finemap_res_multi[finemap_res_multi$id %in% problematic_genes,]
@@ -636,7 +656,9 @@ merge_origin_nold <- merge(finemap_origin_res_problematic_region,finemap_noLD_re
 merge_origin_nold <- merge_origin_nold[,c("id","susie_pip.x","susie_pip.y")]
 colnames(merge_origin_nold) <-  c("id","susie_pip_origin","susie_pip_ld-mismatch-fixed") 
 
-DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP'),options = list(pageLength = 5) )
+DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP for problematic genes'),options = list(pageLength = 5) )
+
+
 
 ```
 
@@ -755,6 +777,15 @@ plot_heatmap(heatmap_data = gene_multi_unique_type, main = "PIP partition for un
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/ld_mismatch/LD_mismatch_", trait,".rdata"))
 
+sprintf("The number of problematic regions = %s", length(problematic_region_ids))
+sprintf("The number of problematic genes = %s", length(problematic_genes))
+sprintf("The number of problematic snps = %s", length(res$problematic_snps))
+sprintf("The number of flipped snps = %s", length(res$flipped_snps))
+
+problematic_snps <- res$condz_stats[res$condz_stats$id %in% res$problematic_snps,]
+
+DT::datatable(problematic_snps,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Stats for problematic snps'),options = list(pageLength = 5) )
+
 finemap_res_multi <- ctwas_res_multi$finemap_res
 
 finemap_origin_res_problematic_region <- finemap_res_multi[finemap_res_multi$id %in% problematic_genes,]
@@ -763,7 +794,9 @@ merge_origin_nold <- merge(finemap_origin_res_problematic_region,finemap_noLD_re
 merge_origin_nold <- merge_origin_nold[,c("id","susie_pip.x","susie_pip.y")]
 colnames(merge_origin_nold) <-  c("id","susie_pip_origin","susie_pip_ld-mismatch-fixed") 
 
-DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP'),options = list(pageLength = 5) )
+DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP for problematic genes'),options = list(pageLength = 5) )
+
+
 
 ```
 
@@ -881,6 +914,15 @@ plot_heatmap(heatmap_data = gene_multi_unique_type, main = "PIP partition for un
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/ld_mismatch/LD_mismatch_", trait,".rdata"))
 
+sprintf("The number of problematic regions = %s", length(problematic_region_ids))
+sprintf("The number of problematic genes = %s", length(problematic_genes))
+sprintf("The number of problematic snps = %s", length(res$problematic_snps))
+sprintf("The number of flipped snps = %s", length(res$flipped_snps))
+
+problematic_snps <- res$condz_stats[res$condz_stats$id %in% res$problematic_snps,]
+
+DT::datatable(problematic_snps,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Stats for problematic snps'),options = list(pageLength = 5) )
+
 finemap_res_multi <- ctwas_res_multi$finemap_res
 
 finemap_origin_res_problematic_region <- finemap_res_multi[finemap_res_multi$id %in% problematic_genes,]
@@ -889,7 +931,9 @@ merge_origin_nold <- merge(finemap_origin_res_problematic_region,finemap_noLD_re
 merge_origin_nold <- merge_origin_nold[,c("id","susie_pip.x","susie_pip.y")]
 colnames(merge_origin_nold) <-  c("id","susie_pip_origin","susie_pip_ld-mismatch-fixed") 
 
-DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP'),options = list(pageLength = 5) )
+DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP for problematic genes'),options = list(pageLength = 5) )
+
+
 
 ```
 
@@ -1008,6 +1052,15 @@ plot_heatmap(heatmap_data = gene_multi_unique_type, main = "PIP partition for un
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/ld_mismatch/LD_mismatch_", trait,".rdata"))
 
+sprintf("The number of problematic regions = %s", length(problematic_region_ids))
+sprintf("The number of problematic genes = %s", length(problematic_genes))
+sprintf("The number of problematic snps = %s", length(res$problematic_snps))
+sprintf("The number of flipped snps = %s", length(res$flipped_snps))
+
+problematic_snps <- res$condz_stats[res$condz_stats$id %in% res$problematic_snps,]
+
+DT::datatable(problematic_snps,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Stats for problematic snps'),options = list(pageLength = 5) )
+
 finemap_res_multi <- ctwas_res_multi$finemap_res
 
 finemap_origin_res_problematic_region <- finemap_res_multi[finemap_res_multi$id %in% problematic_genes,]
@@ -1016,7 +1069,9 @@ merge_origin_nold <- merge(finemap_origin_res_problematic_region,finemap_noLD_re
 merge_origin_nold <- merge_origin_nold[,c("id","susie_pip.x","susie_pip.y")]
 colnames(merge_origin_nold) <-  c("id","susie_pip_origin","susie_pip_ld-mismatch-fixed") 
 
-DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP'),options = list(pageLength = 5) )
+DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP for problematic genes'),options = list(pageLength = 5) )
+
+
 
 ```
 
@@ -1135,6 +1190,15 @@ plot_heatmap(heatmap_data = gene_multi_unique_type, main = "PIP partition for un
 
 load(paste0("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/ld_mismatch/LD_mismatch_", trait,".rdata"))
 
+sprintf("The number of problematic regions = %s", length(problematic_region_ids))
+sprintf("The number of problematic genes = %s", length(problematic_genes))
+sprintf("The number of problematic snps = %s", length(res$problematic_snps))
+sprintf("The number of flipped snps = %s", length(res$flipped_snps))
+
+problematic_snps <- res$condz_stats[res$condz_stats$id %in% res$problematic_snps,]
+
+DT::datatable(problematic_snps,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Stats for problematic snps'),options = list(pageLength = 5) )
+
 finemap_res_multi <- ctwas_res_multi$finemap_res
 
 finemap_origin_res_problematic_region <- finemap_res_multi[finemap_res_multi$id %in% problematic_genes,]
@@ -1143,7 +1207,9 @@ merge_origin_nold <- merge(finemap_origin_res_problematic_region,finemap_noLD_re
 merge_origin_nold <- merge_origin_nold[,c("id","susie_pip.x","susie_pip.y")]
 colnames(merge_origin_nold) <-  c("id","susie_pip_origin","susie_pip_ld-mismatch-fixed") 
 
-DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP'),options = list(pageLength = 5) )
+DT::datatable(merge_origin_nold,caption = htmltools::tags$caption(style = 'caption-side: topleft; text-align = left; color:black;','Original PIP and fixed PIP for problematic genes'),options = list(pageLength = 5) )
+
+
 
 ```
 
