--- a/analysis/methylation_analysis.Rmd
+++ b/analysis/methylation_analysis.Rmd
@@ -201,7 +201,7 @@ grid.arrange(
 
 ### cTWAS parameters with methylation lasso models (50kb, h2 pvalue<0.00001)
 ```{r, echo=FALSE, fig.width=15, fig.height=13}
-param <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi/ibd_multi.param.RDS")
+param <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_E_M/ibd_multi_E_M.param.RDS")
 gwas_n <- 59957
 colors <- c(  "#1f77b4", "#ff7f0e", "#2ca02c", "#d62728",  "#9467bd", "#8c564b", "#e377c2", "#7f7f7f",  "#bcbd22",  "#17becf",  "#f7b6d2",  "#c5b0d5",  "#9edae5", "#ffbb78",  "#98df8a",  "#ff9896" )
 make_convergence_plots(param, gwas_n,colors = colors)
@@ -211,19 +211,19 @@ make_convergence_plots(param, gwas_n,colors = colors)
 ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_E_M/ibd_multi_E_M.ctwas_parameters.RDS")
 pve_pie_by_type_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "type")
 pve_pie_by_context_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "context")
-gridExtra::grid.arrange(pve_pie_by_type_multi,pve_pie_by_context_multi, ncol = 2)
+aplot::plot_list(pve_pie_by_type_multi,pve_pie_by_context_multi)
+#gridExtra::grid.arrange(pve_pie_by_type_multi,pve_pie_by_context_multi, ncol = 2)
 ```
 
 ### Top cTWAS genes with methylation lasso models
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 gwas_n <- 59957
-finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi/ibd_multi.finemap_regions_res.RDS")
+finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_E_M/ibd_multi_E_M.finemap_regions_res.RDS")
 gene_annot <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
 susie_alpha_res <- anno_susie_alpha_res(finemap_res$susie_alpha_res,
                                         mapping_table = gene_annot,
                                         map_by = "molecular_id",
                                         drop_unmapped = TRUE)
-
 
 combined_pip_by_type <- combine_gene_pips(susie_alpha_res, 
                                              group_by = "gene_name",
@@ -239,9 +239,18 @@ combined_pip_by_context <- combine_gene_pips(susie_alpha_res,
                                              filter_cs = TRUE,
                                              include_cs_id = FALSE)
 
-DT::datatable(combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by omics'),options = list(pageLength = 10) )
+combined_pip_by_group <- combine_gene_pips(susie_alpha_res, 
+                                             group_by = "gene_name",
+                                             by = "group",
+                                             method = "combine_cs",
+                                             filter_cs = TRUE,
+                                             include_cs_id = FALSE)
 
-DT::datatable(combined_pip_by_context[combined_pip_by_context$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by tissue'),options = list(pageLength = 10) )
+DT::datatable(combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by modalities'),options = list(pageLength = 10) )
+
+DT::datatable(combined_pip_by_context[combined_pip_by_context$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by contexts'),options = list(pageLength = 10) )
+
+DT::datatable(combined_pip_by_group,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by modalities and contexts'),options = list(pageLength = 10) )
 ```
 
 ### Top cTWAS genes from single tissue models
@@ -304,13 +313,11 @@ colon_M_res <- subset(colon_M_res, type != "SNP" & susie_pip > 0.8 & !is.na(cs))
 colon_M_res <- colon_M_res[,c("gene_name","susie_pip","context")]
 DT::datatable(colon_M_res,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Top meQTL genes in colon'),options = list(pageLength = 10) )
 
-
-# Generate 3 sets of 200 words
 set1 <- wholeblood_E_res$gene_name
 set2 <- wholeblood_M_res$gene_name
 set3 <- colon_E_res$gene_name
 set4 <- colon_M_res$gene_name
-# Prepare a palette of 3 colors with R colorbrewer:
+
 library(RColorBrewer)
 library(VennDiagram)
 myCol <- brewer.pal(4, "Pastel2")
@@ -327,40 +334,7 @@ aa <- venn.diagram(
 grid.draw(aa)
 ```
 
-```{r}
-set1 <- wholeblood_E_res$gene_name
-set2 <- colon_E_res$gene_name
-set3 <- combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,]$gene_name
-# Prepare a palette of 3 colors with R colorbrewer:
-library(RColorBrewer)
-myCol <- brewer.pal(3, "Pastel2")
-# Chart
-aa <- venn.diagram(
-  x = list(set1, set2, set3),
-  category.names = c("wholeblood E" , "Colon E", "All"),
-  filename = NULL,
-  lwd = 2,
-  lty = 'blank',
-  fill = myCol
-)
-
-grid.draw(aa)
-```
-
-```{r}
-snp_map <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi/ibd_multi.snp_map.RDS")
-ibd_multi_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi/ibd_multi.finemap_regions_res.RDS")
-ibd_multi_res <- anno_finemap_res(ibd_multi_res$finemap_res,
-                                snp_map = snp_map,
-                                mapping_table = gene_annot,
-                                add_gene_annot = TRUE,
-                                map_by = "molecular_id",
-                                drop_unmapped = TRUE,
-                                add_position = TRUE,
-                                use_gene_pos = "mid")
-```
-
-```{r}
+```{r echo=FALSE}
 gwas_n <- 59957
 finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_M/ibd_multi_M.finemap_regions_res.RDS")
 gene_annot <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
@@ -380,7 +354,27 @@ genes_M <- combine_gene_pips(susie_alpha_res,
 genes_M <- genes_M[genes_M$combined_pip>0.8,]
 ```
 
-```{r}
+```{r echo=FALSE}
+gwas_n <- 59957
+finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_E/ibd_multi_E.finemap_regions_res.RDS")
+gene_annot <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
+susie_alpha_res <- anno_susie_alpha_res(finemap_res$susie_alpha_res,
+                                        mapping_table = gene_annot,
+                                        map_by = "molecular_id",
+                                        drop_unmapped = TRUE)
+
+
+genes_E <- combine_gene_pips(susie_alpha_res, 
+                               group_by = "gene_name",
+                               by = "type",
+                               method = "combine_cs",
+                               filter_cs = TRUE,
+                               include_cs_id = FALSE)
+
+genes_E <- genes_E[genes_E$combined_pip>0.8,]
+```
+
+```{r echo=FALSE}
 gwas_n <- 59957
 finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_E_M/ibd_multi_E_M.finemap_regions_res.RDS")
 gene_annot <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
@@ -397,162 +391,44 @@ genes_EM <- combine_gene_pips(susie_alpha_res,
                                filter_cs = TRUE,
                                include_cs_id = FALSE)
 
-#genes_EM <- genes_EM[genes_EM$combined_pip>0.8,]
+genes_EM <- genes_EM[genes_EM$combined_pip>0.8,]
 ```
 
-```{r}
-set1 <- genes_M$gene_name
+### Adding meQTL to eQTL identifies an additional 11 high PIP genes
+```{r echo=FALSE}
+set1 <- genes_E$gene_name
 set2 <- genes_EM$gene_name
 aa <- venn.diagram(
   x = list(set1, set2),
-  category.names = c("methylation","expression"),
+  category.names = c("eQTL alone","meQTL + eQTL"),
   filename = NULL,
   lwd = 2,
   lty = 'blank',
-  fill = c("red","blue")
+  fill = c("#87CEFA","#fb8072")
 )
 
 grid.draw(aa)
 ```
 
+### Adding eQTL to meQTL identifies an additional 16 high PIP genes
+1. 12/17 meQTL genes still have combined PIP > 0.8 after adding eQTL
+2. 3/17 meQTL genes have decreased combined PIP < 0.8 after adding eQTL
+3. 2/17 meQTL genes are lost, due to region selection after adding eQTL
+4. Among the 12 overalpped genes:
+- One gene (BRD7) is mediation (meQTL pip decreases from 0.96 to 0.09, eQTL pip=0.90).
+- Two genes (TNFSF15 and ATG16L1) are competition (eQTL pip = 0.2 and meQTL pip is decreased by 0.2).
+- Nine genes are meQTL alone (no eQTL pip).
+```{r echo=FALSE}
+set1 <- genes_M$gene_name
+set2 <- genes_EM$gene_name
+aa <- venn.diagram(
+  x = list(set1, set2),
+  category.names = c("meQTL alone","meQTL + eQTL"),
+  filename = NULL,
+  lwd = 2,
+  lty = 'blank',
+  fill = c("#87CEFA","#fb8072")
+)
 
-
-
-### cTWAS parameters with methylation lasso models (500kb, h2 pvalue<0.0001)
-```{r, echo=FALSE, fig.width=15, fig.height=13}
-param <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_old/ibd_multi.param.RDS")
-gwas_n <- 59957
-colors <- c(  "#1f77b4", "#ff7f0e", "#2ca02c", "#d62728",  "#9467bd", "#8c564b", "#e377c2", "#7f7f7f",  "#bcbd22",  "#17becf",  "#f7b6d2",  "#c5b0d5",  "#9edae5", "#ffbb78",  "#98df8a",  "#ff9896" )
-make_convergence_plots(param, gwas_n,colors = colors)
-```
-
-### Percent of heritability with methylation lasso models
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=10, fig.height=5}
-ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_old/ibd_multi.ctwas_parameters.RDS")
-pve_pie_by_type_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "type")
-pve_pie_by_context_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "context")
-gridExtra::grid.arrange(pve_pie_by_type_multi,pve_pie_by_context_multi, ncol = 2)
-```
-### Top cTWAS genes with methylation lasso models
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-gwas_n <- 59957
-finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_old/ibd_multi.finemap_regions_res.RDS")
-gene_annot <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
-susie_alpha_res <- anno_susie_alpha_res(finemap_res$susie_alpha_res,
-                                        mapping_table = gene_annot,
-                                        map_by = "molecular_id",
-                                        drop_unmapped = TRUE)
-
-
-combined_pip_by_type <- combine_gene_pips(susie_alpha_res, 
-                                             group_by = "gene_name",
-                                             by = "type",
-                                             method = "combine_cs",
-                                             filter_cs = TRUE,
-                                             include_cs_id = FALSE)
-
-combined_pip_by_context <- combine_gene_pips(susie_alpha_res, 
-                                             group_by = "gene_name",
-                                             by = "context",
-                                             method = "combine_cs",
-                                             filter_cs = TRUE,
-                                             include_cs_id = FALSE)
-
-DT::datatable(combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by omics'),options = list(pageLength = 10) )
-
-DT::datatable(combined_pip_by_context[combined_pip_by_context$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by tissue'),options = list(pageLength = 10) )
-```
-
-### cTWAS parameters with methylation single QTL models
-```{r, echo=FALSE, fig.width=15, fig.height=13}
-param <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_top/ibd_multi_top.param.RDS")
-gwas_n <- 59957
-colors <- c(  "#1f77b4", "#ff7f0e", "#2ca02c", "#d62728",  "#9467bd", "#8c564b", "#e377c2", "#7f7f7f",  "#bcbd22",  "#17becf",  "#f7b6d2",  "#c5b0d5",  "#9edae5", "#ffbb78",  "#98df8a",  "#ff9896" )
-make_convergence_plots(param, gwas_n,colors = colors)
-```
-### Percent of heritability with methylation single QTL models
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=10, fig.height=5}
-ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_top/ibd_multi_top.ctwas_parameters.RDS")
-pve_pie_by_type_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "type")
-pve_pie_by_context_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "context")
-gridExtra::grid.arrange(pve_pie_by_type_multi,pve_pie_by_context_multi, ncol = 2)
-```
-
-### Top cTWAS genes with methylation single QTL models
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-gwas_n <- 59957
-finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_multi_top/ibd_multi_top.finemap_regions_res.RDS")
-gene_annot <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
-
-susie_alpha_res <- anno_susie_alpha_res(finemap_res$susie_alpha_res,
-                                        mapping_table = gene_annot,
-                                        map_by = "molecular_id",
-                                        drop_unmapped = TRUE)
-
-
-combined_pip_by_type <- combine_gene_pips(susie_alpha_res, 
-                                          group_by = "gene_name",
-                                          by = "type",
-                                          method = "combine_cs",
-                                          filter_cs = TRUE,
-                                          include_cs_id = FALSE)
-
-combined_pip_by_context <- combine_gene_pips(susie_alpha_res, 
-                                             group_by = "gene_name",
-                                             by = "context",
-                                             method = "combine_cs",
-                                             filter_cs = TRUE,
-                                             include_cs_id = FALSE)
-
-DT::datatable(combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by omics'),options = list(pageLength = 10) )
-
-DT::datatable(combined_pip_by_context[combined_pip_by_context$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by tissue'),options = list(pageLength = 10) )
-```
-
-
-## WBC results
-
-### cTWAS parameters with methylation lasso models (50kb, h2 pvalue<0.00001)
-```{r, echo=FALSE, fig.width=15, fig.height=13}
-param <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/wbc_multi/wbc_multi.param.RDS")
-gwas_n <- 563946
-colors <- c(  "#1f77b4", "#ff7f0e", "#2ca02c", "#d62728",  "#9467bd", "#8c564b", "#e377c2", "#7f7f7f",  "#bcbd22",  "#17becf",  "#f7b6d2",  "#c5b0d5",  "#9edae5", "#ffbb78",  "#98df8a",  "#ff9896" )
-make_convergence_plots(param, gwas_n,colors = colors)
-```
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=10, fig.height=5}
-ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/wbc_multi/wbc_multi.ctwas_parameters.RDS")
-pve_pie_by_type_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "type")
-pve_pie_by_context_multi <- plot_piechart(ctwas_parameters = ctwas_parameters, colors = colors, by = "context")
-gridExtra::grid.arrange(pve_pie_by_type_multi,pve_pie_by_context_multi, ncol = 2)
-```
-
-### Top cTWAS genes with methylation single QTL models
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-finemap_res <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/wbc_multi/wbc_multi.finemap_regions_res.RDS")
-gene_annot <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
-
-susie_alpha_res <- anno_susie_alpha_res(finemap_res$susie_alpha_res,
-                                        mapping_table = gene_annot,
-                                        map_by = "molecular_id",
-                                        drop_unmapped = TRUE)
-
-
-combined_pip_by_type <- combine_gene_pips(susie_alpha_res, 
-                                          group_by = "gene_name",
-                                          by = "type",
-                                          method = "combine_cs",
-                                          filter_cs = TRUE,
-                                          include_cs_id = FALSE)
-
-combined_pip_by_context <- combine_gene_pips(susie_alpha_res, 
-                                             group_by = "gene_name",
-                                             by = "context",
-                                             method = "combine_cs",
-                                             filter_cs = TRUE,
-                                             include_cs_id = FALSE)
-
-DT::datatable(combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by omics'),options = list(pageLength = 10) )
-
-DT::datatable(combined_pip_by_context[combined_pip_by_context$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Combined PIP by tissue'),options = list(pageLength = 10) )
+grid.draw(aa)
 ```
